--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,12 +5,14 @@ phases:
     commands:
       - if [ -e /tmp/node_modules.tar ]; then tar xf /tmp/node_modules.tar; fi
       - npm install
+      - pip install --upgrade awscli
   build:
     commands:
       - npm run build
   post_build:
     commands:
       - tar cf /tmp/node_modules.tar node_modules
+      - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths '/*'
 artifacts:
   files:
     - '**/*'
